<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fourth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diete.av.fourth">

    <TextView
        android:text="@string/detalii_IMC"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"/>

    <TextView
        android:text="@string/kg"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/greutate"
        android:layout_alignBottom="@+id/greutate"
        android:layout_toEndOf="@+id/greutate" />

    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="26dp"
        android:id="@+id/greutate"
        android:layout_width="75dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"/>

    <Button
        android:text="@string/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculeaza"
        android:onClick="onClick"
        android:layout_alignTop="@+id/inaltime"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/cm"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/inaltime"
        android:layout_alignBottom="@+id/inaltime"
        android:layout_toEndOf="@+id/inaltime"
        android:layout_marginStart="9dp"/>

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/inaltime"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginStart="9dp"/>

    <TextView
        android:text="@string/rezultat_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/textView7"
        android:textStyle="normal|bold"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/calculeaza"
        android:layout_toStartOf="@+id/calculeaza"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/rezultat"
        android:textAllCaps="true"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_height="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/rezultat"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:text="@string/Interpretare_imc"
        android:textAlignment="center"
        android:layout_height="40dp"/>

    <Button
        android:text="@string/buton_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/but13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
