<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/drawer1"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
    tools:context="com.diete.av.first"
    >

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity='start'
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/draw"

    />


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Home"
                tools:context="com.diete.av.first"
    >

    <include layout="@layout/action_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include"
        android:layout_marginTop="55dp"
        android:maxLines="15"
        android:paddingLeft="5dp"
        android:scrollbars="none"
        android:text="@string/matei"
        android:textColor="#BA55D3"
        android:textSize="21sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry,UnknownId"/>

    <Button
        android:id="@+id/imc"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="120dp"
        android:layout_toStartOf="@+id/retete"
        android:text="@string/IMC"
        android:textSize="10sp"
        android:textStyle="normal|bold"
        tools:ignore="SmallSp"/>

    <Button
        android:id="@+id/fbbutton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:clickable="true"
        android:text="Facebook"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/retete"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:text="@string/retete"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="normal|bold"
        android:typeface="sans"/>
</RelativeLayout>
</android.support.v4.widget.DrawerLayout>